# AI-Scientist-v2

./: AGENTS.md  README.md  error.txt  launch_paper_improver.py  launch_scientist_bfts.py  out.txt  paper_improver_config.yaml  patch.txt  pyproject.toml
ai_scientist/: llm.py  perform_icbinb_writeup.py  perform_llm_review.py  perform_vlm_review.py  perform_writeup.py  vlm.py
ai_scientist/paper_improver/: __init__.py  core.py  genetic_search  latex_editor.py  llm_review.py  meta_review.py  parallel_search.py  pipeline.py  reflection.py  search.py  utils.py  vlm_review.py  writeup.py
examples/d0_d82f45d1/: reviews.json  seed_ideas.json  template.aux  template.out  template.tex
examples/draft_bab8d0df/: README.md
examples/draft_ddb1bd69/: human_reviews.txt  reviews.json  template.bbl  template.blg  template.tex
examples/draft_fc54c68e/: template.tex
examples/paper_improver_minimal/: README.md  cached_citations.bib  human_reviews.txt  references.bib  research_idea.md  reviews.json  seed_ideas.json  template.aux  template.blg  template.out  template.tex
examples/paper_improver_minimal/latex/: references.bib  template.aux  template.blg
scripts/: launch_paper_improver.py
tests/: conftest.py  test_cli.py  test_extra.py  test_latex_editor.py  test_massive.py  test_meta_review.py  test_pipeline.py  test_reflection.py  test_search.py  test_utils.py  test_wrappers.py
