[project]
name = "ai_scientist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.2",
    "backoff>=2.2.1",
    "black>=25.1.0",
    "boto3>=1.38.32",
    "botocore>=1.38.32",
    "coolname>=2.2.0",
    "dataclasses-json>=0.6.7",
    "datasets>=3.6.0",
    "funcy>=2.0",
    "genson>=1.3.0",
    "humanize>=4.12.3",
    "jsonschema>=4.24.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "omegaconf>=2.3.0",
    "openai>=1.84.0",
    "pymupdf4llm>=0.0.24",
    "pypdf>=5.6.0",
    "python-igraph>=0.11.8",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "shutup>=0.2.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "wandb>=0.20.1",
]
